porządki w oknie konfiguracji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4400 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/sms/configuration/sms.ui
+++ b/modules/sms/configuration/sms.ui
@@ -26,7 +26,7 @@
 
 	<section name="Shortcuts">
 		<tab name="General">
-			<group-box name="Shortcuts">
+			<group-box name="SMS">
 				<hot-key-edit caption="Send SMS" config-section="ShortCuts" config-item="kadu_sendsms" />
 			</group-box>
 		</tab>
