--- a/modules/history/configuration/history.ui
+++ b/modules/history/configuration/history.ui
@@ -17,7 +17,7 @@
 	</section>
 	<section name="Shortcuts">
 		<tab name="General">
-			<group-box name="History" id="history/shortCuts">
+			<group-box name="Chat" id="history/shortCuts">
 				<hot-key-edit caption="View history" config-section="ShortCuts" config-item="kadu_viewhistory" />
 			</group-box>
 		</tab>
