poprawiony wygląd okna konfiguracyjnego
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4405 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/sms/configuration/sms.ui
+++ b/modules/sms/configuration/sms.ui
@@ -16,9 +16,9 @@
 			</group-box>
 
 			<group-box name="Gateways">
-				<list-box caption="Gateways priorites" id="sms/gateways" />
-				<action-button caption="Up" id="sms/up" />
-				<action-button caption="Down" id="sms/down" />
+<!-- 				<list-box caption="Gateways priorites" id="sms/gateways" /> -->
+<!-- 				<action-button caption="Up" id="sms/up" /> -->
+<!-- 				<action-button caption="Down" id="sms/down" /> -->
 			</group-box>
 		</tab>
 
