poprawiony import konfiguracji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4419 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/sound/configuration/sound.ui
+++ b/modules/sound/configuration/sound.ui
@@ -7,7 +7,7 @@
 				<check-box caption="Use sounds" config-section="Sounds" config-item="PlaySound" id="sound/use" />
 			</group-box>
 			<group-box name="Theme" id="sound/theme">
-				<combo-box caption="Sound theme" config-section="Sounds" config-item="SoundTheme" id="sound/themes" />
+				<combo-box caption="Sound theme" config-section="" config-item="" id="sound/themes" />
 				<action-button caption="Apply theme" id="sound/applyTheme" />
 				<path-list-edit caption="Sound paths" config-section="" config-item="" id="soundPaths" />
 			</group-box>
