obsługa ikonek w config-dialogu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4454 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -134,7 +134,7 @@
 		</tab>
 	</section>
 
-	<section name="Look">
+	<section name="Look" icon="LookTab">
 		<tab name="General">
 			<group-box name="General">
 				<combo-box caption="Theme" config-section="Look" config-item="QtStyle" id="qtThemes"
@@ -268,7 +268,7 @@
 		</tab>
 	</section>
 
-	<section name="Shortcuts">
+	<section name="Shortcuts" icon="ShortCutsTab">
 		<tab name="General">
 			<group-box name="Kadu">
 				<hot-key-edit caption="Configuration" config-section="ShortCuts" config-item="kadu_configure" />
@@ -294,7 +294,7 @@
 		</tab>
 	</section>
 
-	<section name="Chat">
+	<section name="Chat" icon="ChatTab">
 		<tab name="General">
 			<group-box name="Behaviour">
 				<check-box caption="Remember chat windows positions" config-section="Chat" config-item="RememberPosition" />
