--- a/modules/autoaway/configuration/autoaway.ui
+++ b/modules/autoaway/configuration/autoaway.ui
@@ -5,15 +5,15 @@
 				<spin-box caption="Check idle every" config-section="General" config-item="AutoAwayCheckTime" min-value="1" max-value="10000" step="5" />
 				<check-box caption="Enable autoaway" config-section="General" config-item="AutoAway"
 					id="autoaway/enableAutoAway" />
-				<spin-box caption="Set status to away after" config-section="General" config-item="AutoAwayTime" min-value="1" max-value="10000" step="1"
+				<spin-box caption="Set status to away after" config-section="General" config-item="AutoAwayTime" min-value="1" max-value="10000"
 					id="autoaway/autoAway" />
 				<check-box caption="Enable autoinvisible" config-section="General" config-item="AutoInvisible"
 					id="autoaway/enableAutoInvisible" />
-				<spin-box caption="Set status to invisible after" config-section="General" config-item="AutoInvisibleTime" min-value="1" max-value="10000" step="1"
+				<spin-box caption="Set status to invisible after" config-section="General" config-item="AutoInvisibleTime" min-value="1" max-value="10000"
 					id="autoaway/autoInvisible" />
 				<check-box caption="Enable autodisconnect" config-section="General" config-item="AutoDisconnect"
 					id="autoaway/enableAutoOffline" />
-				<spin-box caption="Disconnect after" config-section="General" config-item="AutoDisconnectTime" min-value="1" max-value="10000" step="1"
+				<spin-box caption="Disconnect after" config-section="General" config-item="AutoDisconnectTime" min-value="1" max-value="10000"
 					id="autoaway/autoOffline" />
 			</group-box>
 
