--- a/modules/history/configuration/history.ui
+++ b/modules/history/configuration/history.ui
@@ -12,7 +12,7 @@
 					   tool-tip="Don't save status changes in history" />
 			</group-box>
 			<group-box name="Citation" id="history/citation">
-				<spin-box caption="Message citation in chat window" config-section="History" config-item="ChatHistoryCitation" min-value="0" max-value="200" step="1" />
+				<spin-box caption="Message citation in chat window" config-section="History" config-item="ChatHistoryCitation" min-value="0" max-value="200" />
 				<slider caption="Don't cite messages older than" config-section="History" config-item="ChatHistoryQuotationTime" min-value="-744" max-value="-1" page-step="24" id="history/dontCiteOldMessages" />
 				<label caption="." id="history/dontCiteOldMessagesLabel" />
 			</group-box>
