--- a/varia/configuration/dialog-look-chat-advanced.ui
+++ b/varia/configuration/dialog-look-chat-advanced.ui
@@ -2,15 +2,15 @@
 	<section name="Look">
 		<tab name="Chat">
 			<group-box name="Headers and separators">
-				<spin-box caption="Chat header separators height" config-section="Look" config-item="HeaderSeparatorHeight" min-value="0" max-value="100" step="1" />
-				<spin-box caption="Message separators height" config-section="Look" config-item="ParagraphSeparator" min-value="0" max-value="100" step="1" />
+				<spin-box caption="Chat header separators height" config-section="Look" config-item="HeaderSeparatorHeight" min-value="0" max-value="100" />
+				<spin-box caption="Message separators height" config-section="Look" config-item="ParagraphSeparator" min-value="0" max-value="100" />
 				<check-box caption="Remove chat header repetitions" config-section="Look" config-item="NoHeaderRepeat" id="noHeaderRepeat" />
-				<spin-box caption="Interval between header removal" config-section="Look" config-item="NoHeaderInterval" min-value="1" max-value="1439" step="1" id="noHeaderInterval" />
+				<spin-box caption="Interval between header removal" config-section="Look" config-item="NoHeaderInterval" min-value="1" max-value="1439" id="noHeaderInterval" />
 			</group-box>
 
 			<group-box name="Server time">
 				<check-box caption="Remove server time" config-section="Look" config-item="NoServerTime" id="removeServerTime" />
-				<spin-box caption="Maximum time difference" config-section="Look" config-item="NoServerTimeDiff" min-value="1" max-value="1000" step="1" id="maxTimeDifference" />
+				<spin-box caption="Maximum time difference" config-section="Look" config-item="NoServerTimeDiff" min-value="1" max-value="1000" id="maxTimeDifference" />
 			</group-box>
 
 <!-- 			<group-box name="Background"> -->
