--- a/modules/hints/configuration/hints.ui
+++ b/modules/hints/configuration/hints.ui
@@ -26,6 +26,8 @@
 					<item value="2" caption="Bottom left" />
 					<item value="2" caption="Bottom right" />
 				</combo-box>
+				<spin-box caption="Minimum width" config-section="Hints" config-item="MinimumWidth" min-value="0" max-value="10240" id="hints/minimumWidth" suffix="px" />
+				<spin-box caption="Maximum width" config-section="Hints" config-item="MaximumWidth" min-value="0" max-value="10240" id="hints/maximumWidth" suffix="px" />
 			</group-box>
 			<group-box name="Look">
 				<check-box caption="Set for all" config-section="Hints" config-item="SetAll" id="hints/setAll" />
