--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -188,7 +188,7 @@
 			</group-box>
 
 			<group-box name="Style">
-				<syntax-editor caption="Style" config-section="Look" config-item="Style" category="chat" id="chatSyntax"
+				<syntax-editor caption="Style" config-section="Look" config-item="Style" category="Chat" id="chatSyntax"
 					       tool-tip="Choose style of chat window" />
 				<preview caption="Preview" id="chatSyntaxPreview" />
 			</group-box>
@@ -261,7 +261,7 @@
 			</group-box>
 
 			<group-box name="Style">
-				<syntax-editor caption="Style" config-section="Look" config-item="InfoPanelSyntaxFile" category="infopanel" id="infoPanelSyntax"
+				<syntax-editor caption="Style" config-section="Look" config-item="InfoPanelSyntaxFile" category="InfoPanel" id="infoPanelSyntax"
 					       tool-tip="Choose information panel style" />
 				<preview caption="Preview" id="infoPanelSyntaxPreview" />
 			</group-box>
