--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -185,6 +185,7 @@
 				<check-box caption="Activate windows with new messages" config-section="Chat" config-item="ActivateWithNewMessages" />
 				<check-box caption="Flash chat title on new message" config-section="Chat" config-item="BlinkChatTitle" />
 				<check-box caption="Show number of new messages on chat title" config-section="Chat" config-item="NewMessagesInChatTitle" />
+				<check-box caption="Nice date format" config-section="Look" config-item="NiceDateFormat" />
 			</group-box>
 
 			<group-box name="Style">
